--- a/Kontrolki/Kontrolki.csproj
+++ b/Kontrolki/Kontrolki.csproj
@@ -76,6 +76,9 @@
         <EmbeddedResource Include="FormHome.resx">
           <DependentUpon>FormHome.cs</DependentUpon>
         </EmbeddedResource>
+        <EmbeddedResource Include="FormScheduler.resx">
+          <DependentUpon>FormScheduler.cs</DependentUpon>
+        </EmbeddedResource>
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
